--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root{
       --negro:#000000;
       --rojo:#c40000;
-      --gris:#f2f2f2;
+      --blanco:#ffffff;
       --verde:#25D366;
     }
 
@@ -19,28 +19,34 @@
 
     body{
       margin:0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      color:#111;
+      font-family:"Segoe UI", Arial, sans-serif;
       background:#fff;
+      color:#111;
       line-height:1.5;
     }
 
-    /* ================= HERO PREMIUM ================= */
+    /* ================= HERO MIX ================= */
 
     .hero{
       position:relative;
       min-height:100vh;
-      background-image:url("https://images.unsplash.com/photo-1601584115197-04ecc0da31d7?auto=format&fit=crop&w=1920&q=80");
-      background-size:cover;
-      background-position:center;
-      color:#fff;
+      background-image:
+        url("https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?auto=format&fit=crop&w=1200&q=80"), /* carga liviana */
+        url("https://images.unsplash.com/photo-1603570417594-4a0c5c4dff4a?auto=format&fit=crop&w=1200&q=80"), /* logística */
+        url("https://images.unsplash.com/photo-1597008641621-bd3c3a3a8f7b?auto=format&fit=crop&w=1200&q=80"), /* mudanza */
+        url("https://images.unsplash.com/photo-1501706362039-c6e08c6c7b41?auto=format&fit=crop&w=1200&q=80"); /* carga pesada */
+
+      background-size:25% 100%;
+      background-position:0% 0%, 33% 0%, 66% 0%, 100% 0%;
+      background-repeat:no-repeat;
+      color:var(--blanco);
     }
 
     .hero::before{
       content:"";
       position:absolute;
       inset:0;
-      background:rgba(0,0,0,0.65);
+      background:rgba(0,0,0,0.7);
     }
 
     .hero-content{
@@ -51,8 +57,8 @@
       padding:80px 20px;
       display:grid;
       grid-template-columns:1fr 1fr;
-      align-items:center;
       gap:40px;
+      align-items:center;
     }
 
     .hero img{
@@ -68,8 +74,8 @@
 
     .hero p{
       font-size:18px;
-      margin:0 0 25px;
       max-width:520px;
+      margin:0 0 25px;
     }
 
     .btn-whatsapp{
@@ -95,7 +101,7 @@
     }
 
     .services{
-      background:var(--gris);
+      background:#f2f2f2;
     }
 
     .services-grid{
@@ -114,11 +120,6 @@
       text-align:center;
     }
 
-    .card h3{
-      margin-top:0;
-      color:var(--negro);
-    }
-
     .coverage{
       max-width:900px;
       margin:auto;
@@ -129,6 +130,11 @@
     /* ================= RESPONSIVE ================= */
 
     @media(max-width:900px){
+      .hero{
+        background-size:cover;
+        background-position:center;
+      }
+
       .hero-content{
         grid-template-columns:1fr;
         text-align:center;
@@ -151,7 +157,7 @@
 
 <body>
 
-  <!-- HERO PREMIUM -->
+  <!-- HERO MIX -->
   <header class="hero">
     <div class="hero-content">
       <img src="logo-srt.png" alt="Segovia Rosales Transportes">
@@ -160,8 +166,8 @@
         <h1>Segovia Rosales Transportes</h1>
         <p>
           Transporte, fletes y mudanzas profesionales.<br>
-          Operación confiable desde Santiago hacia el norte del país,
-          con soluciones logísticas escalables y responsables.
+          Gestión logística integral desde carga liviana y mudanzas,
+          hasta carga pesada y rutas largas hacia el norte del país.
         </p>
 
         <a class="btn-whatsapp"
@@ -187,10 +193,10 @@
       </div>
 
       <div class="card">
-        <h3>Transporte de Carga</h3>
+        <h3>Gestión Logística</h3>
         <p>
-          Transporte de carga general y paletizada, con foco en seguridad,
-          orden y cumplimiento de plazos.
+          Coordinación, carga, descarga y transporte de mercancías,
+          con foco en orden, seguridad y cumplimiento de plazos.
         </p>
       </div>
 
@@ -209,7 +215,7 @@
     <h2>Cobertura</h2>
     <div class="coverage">
       Operamos en Santiago y la zona centro del país, con cobertura extendida
-      hacia el norte, incluyendo rutas a Vallenar y Calama, gracias a nuestra
+      hacia el norte, incluyendo rutas a Vallenar y Calama, apoyados por nuestra
       red logística y alianzas estratégicas.
     </div>
   </section>
